<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvProfile"
        style="@style/textView_blackHeader20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="20dp"
        android:text="@string/fr_prof_textView_text_profile"

        app:layout_constraintBottom_toTopOf="@id/tilLogin"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/fr_prof_button_text_save"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tilLogin"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/tvProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21"
        app:rippleColor="@android:color/transparent"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLogin"
        style="@style/textInputLayout_inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@id/tvProfile"
        app:layout_constraintBottom_toTopOf="@id/tilNickname">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reg_textInputLayout_hint_login" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNickname"
        style="@style/textInputLayout_inputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/tilLogin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fr_prof_textInputLayout_hint_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChange"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/fr_prof_button_text_change"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:rippleColor="@android:color/transparent"
        tools:ignore="TouchTargetSizeCheck"

        app:layout_constraintStart_toStartOf="@id/tilNickname"
        app:layout_constraintTop_toBottomOf="@id/tilNickname" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExit"
        style="@style/materialButton_squareButton"
        android:text="@string/fr_prof_button_text_exit"
        android:backgroundTint="@color/red"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
