<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnArrow"
            style="@style/imageButton_arrow"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvLogin"
            style="@style/textView_header"
            android:text="@string/log_textView_text_login"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnArrow"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLogin"
            style="@style/textInputLayout_inputField"
            android:layout_height="match_parent"
            android:layout_width="match_parent"

            app:layout_constraintTop_toBottomOf="@id/tvLogin">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_textInputLayout_hint_login"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/textInputLayout_inputField"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"

            app:layout_constraintTop_toBottomOf="@id/tilLogin">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/reg_textInputLayout_hint_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            style="@style/materialButton_blueButton"
            android:layout_marginTop="30dp"
            android:text="@string/reg_materialButton_continue"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword" />

        <ImageView
            android:id="@+id/ivBicycles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/ic_bicycles"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnContinue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>